--- a/styles/global.css
+++ b/styles/global.css
@@ -3,3 +3,31 @@
  margin: 0;
  box-sizing: border-box; 
 }
+
+:root {
+  /*Colors*/
+  --red: #E3646E;
+  --purple: #BB72E9;
+  --blue: #3996DB;
+  --green: #82BC4F;
+  --yellow: #EABD5F;
+  --gray-100: #0D0E11;
+  --gray-200: #16181D;
+  --gray-300: #292C34;
+  --gray-400: #878EA1;
+  --gray-500: #C0C4CE;
+  --gray-600: #E2E4E9;
+
+  /*Fonts*/
+  --font-asap: "Asap", serif;
+  --title-tl: 700 3.5rem/120% var(--font-asap);
+  --title-md: 700 1.5rem/120% var(--font-asap);
+  --title-sm: 700 1rem/120% var(--font-asap);
+
+  --font-inconsolata: "Inconsolata", serif;
+  --subtitle: 1.25rem/120% var(--font-inconsolata);
+
+  --font-maven: "Maven Pro", serif;
+  --text-md: 1rem/140% var(--font-maven);
+  --text-sm: .875rem/140% var(--font-maven);
+}
