--- a/styles/global.css
+++ b/styles/global.css
@@ -31,12 +31,20 @@
   --text-md: 1rem/140% var(--font-maven);
   --text-sm: .875rem/140% var(--font-maven);
 }
+
 body {
   font: var(--text-md);
   color: var(--gray-500);
   overflow-x: hidden; 
 }
 
+a {
+  text-decoration: none;
+  color: inherit;
+}
+ul {
+  list-style: none;
+}
 .bg-intro {
   display: flex;
   align-items: center;
@@ -66,4 +74,13 @@ body {
   justify-content: center;
   background-color: var(--gray-100);
   padding: 88px 120px 120px 120px;
+}
+
+.bg-footer {
+  background: url(../assets/bg-images/Background_Contacts.png) 50% / cover no-repeat;
+  padding: 128px 120px 200px 120px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
